<resources>
    <string name="app_name">AmbiGest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="palavra_passe">Palavra-passe</string>
    <string name="entrar_no_ambigest">Entrar no ambiGest</string>
    <string name="entrar">ENTRAR</string>
    <string name="novo_no_ambigest">Novo no ambiGest?</string>
    <string name="esqueceu_se_da_palavra_passe">Esqueceu-se da palavra-passe?</string>
    <string name="bem_vindo_a_ambigest">Bem vindo a ambiGest !</string>
    <string name="insira_o_seu_email">Insira o seu email</string>
    <string name="registar">REGISTAR</string>
    <string name="crie_uma_conta">Crie uma conta.</string>
    <string name="j_possui_conta">Já possui conta?</string>
    <string name="entrarSmall">Entrar</string>
    <string name="enviar_email_de_redefini_o_de_senha">ENVIAR EMAIL DE REDEFINIÇÃO DE SENHA</string>
    <string name="repor_a_palavra_passe">Repor a palavra-passe</string>
    <string name="ol">Olá, %s</string>
    <string name="fatura_o">Faturação</string>
    <string name="home">Home</string>
    <string name="recolhas">Recolhas</string>
    <string name="leituras">Leituras</string>
    <string name="as_minhas_faturas">As minhas faturas</string>
    <string name="por_m3">%s € por m3</string>
    <string name="consumo">Consumo</string>
    <string name="aumento">Aumento</string>
    <string name="total">Total</string>
    <string name="as_minhas_leituras">As minhas leituras</string>
    <string name="pr_xima_leitura">Próxima leitura...</string>
    <string name="nova_leitura">Nova Leitura</string>
    <string name="x">X</string>
    <string name="conta">Conta</string>
    <string name="contactos">Contactos</string>
    <string name="sair">Sair</string>
</resources>