<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerFragment"
            type="com.example.ambigest.fragments.RegisterFragment" />
        <variable
            name="viewModel"
            type="com.example.ambigest.viewModel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegisterFragment"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/register_img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_tv_title"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/bem_vindo_a_ambigest"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_img_logo" />

        <TextView
            android:id="@+id/register_tv_email"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/insira_o_seu_email"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_title" />

        <EditText
            android:id="@+id/register_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/email"
            android:text="@{viewModel.email}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_email" />

        <TextView
            android:id="@+id/register_tv_password"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Crie uma palavra-passe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_et_email" />

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/palavra_passe"
            android:text="@{viewModel.password}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_password" />

        <Button
            android:id="@+id/register_btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/registar"
            app:layout_constraintTop_toBottomOf="@+id/register_et_password" />

        <TextView
            android:id="@+id/login_tv_register"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/j_possui_conta"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_tvBtn_register"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_tvBtn_register"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrarSmall"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/login_tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_tv_register"
            android:onClick="@{() -> registerFragment.redirectToLoginFragment()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>