<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/login_img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            style="?attr/textAppearanceHeadline5"
            app:layout_constraintTop_toBottomOf="@+id/login_img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/entrar_no_ambigest" />

        <TextView
            android:id="@+id/login_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            style="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_title"
            android:text="@string/email" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_email" />

        <TextView
            android:id="@+id/login_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            style="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@+id/login_et_email"
            android:text="@string/palavra_passe" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:hint="@string/palavra_passe"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/entrar"
            app:layout_constraintTop_toBottomOf="@+id/login_et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>