<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="forgotPasswordFragment"
            type="com.example.ambigest.fragments.ForgotPasswordFragment" />
        <variable
            name="viewModel"
            type="com.example.ambigest.viewModel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".fragments.ForgotPasswordFragment">

        <ImageView
            android:id="@+id/forgotPassword_img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgotPassword_tv_title"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/repor_a_palavra_passe"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_img_logo" />

        <EditText
            android:id="@+id/forgotPassword_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/insira_o_seu_email"
            android:text="@{viewModel.email}"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_tv_title" />

        <Button
            android:id="@+id/forgotPassword_btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primary_dark"
            android:text="@string/enviar_email_de_redefini_o_de_senha"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_et_email"
            android:onClick="@{() -> forgotPasswordFragment.recoverUserPassword()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>