<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="4dp"
    android:background="@color/blueCard"
    android:paddingBottom="20dp">
    <TextView
        android:id="@+id/itemInvoice_tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Janeiro"
        style="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/itemInvoices_graphic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/primary_light"
        app:layout_constraintTop_toBottomOf="@+id/itemInvoice_tv_month"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/itemInvoices_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumo"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/itemInvoices_graphic"
        app:layout_constraintStart_toStartOf="@+id/itemInvoice_tv_month" />
    <TextView
        android:id="@+id/itemInvoices_consumptionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16.2 m3"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemInvoices_consumption"/>

    <TextView
        android:id="@+id/itemInvoices_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aumento"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/itemInvoices_consumption"
        app:layout_constraintStart_toStartOf="@+id/itemInvoice_tv_month" />
    <TextView
        android:id="@+id/itemInvoices_increaseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="-0.5 m3"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemInvoices_increase"/>

    <TextView
        android:id="@+id/itemInvoices_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/itemInvoices_increase"
        app:layout_constraintStart_toStartOf="@+id/itemInvoice_tv_month"/>
    <TextView
        android:id="@+id/itemInvoices_totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="23.1 €"
        android:textSize="16sp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemInvoices_total"/>
</androidx.constraintlayout.widget.ConstraintLayout>