<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.ambigest.viewModel.ReadingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ReadingsFragment"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/readings_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_minhas_leituras"
            style="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/readings_graphic"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/readings_tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/readings_cl_readingsManage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/readings_graphic"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/primary_light"
            android:paddingVertical="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/readings_tv_nextReadingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr_xima_leitura"
                style="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/readings_btn_newReading" />

            <TextView
                android:id="@+id/readings_tv_nextReadingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Fevereiro de 2023"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/readings_tv_nextReadingTitle"
                app:layout_constraintStart_toStartOf="@+id/readings_tv_nextReadingTitle"
                app:layout_constraintEnd_toEndOf="@+id/readings_tv_nextReadingTitle"
                android:text="@{viewModel.nextReadingDate}"/>

            <Button
                android:id="@+id/readings_btn_newReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nova_leitura"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/readings_tv_nextReadingTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/readings_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/readings_cl_readingsManage"
            app:layout_constraintBottom_toTopOf="@+id/readings_navigation"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/readings_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>